--- a/package.json
+++ b/package.json
@@ -7,5 +7,7 @@
   "devDependencies": {
     "@playwright/test": "^1.37.0"
   },
-  "scripts": {}
+  "scripts": {
+    "serve": "npx http-server app"
+  }
 }
